--- a/twitcomet-java/conf/application.conf
+++ b/twitcomet-java/conf/application.conf
@@ -9,23 +9,25 @@ application.secret="RYqN_fV/NR32:uE>ZGmaqMB4<RCEojUHjQ69rnkH5_MJ4n>5U8W`Kk3lZL1^
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="fr"
+
 
 # Global object class
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# global=Global
+#global=Global
 
 # Database configuration
 # ~~~~~ 
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/twitcomet"
+db.default.user=root
+db.default.password=""
+
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
@@ -40,7 +42,7 @@ application.langs="en"
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
