--- a/twitcomet-java/conf/application.conf
+++ b/twitcomet-java/conf/application.conf
@@ -16,7 +16,7 @@ application.langs="fr"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-#global=Global
+global=global.Global
 
 # Database configuration
 # ~~~~~ 
