--- a/twitcomet-java/conf/application.conf
+++ b/twitcomet-java/conf/application.conf
@@ -1,6 +1,10 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+# Configuration application
+# ~~~~~
+pagination.first = 20
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
@@ -52,7 +56,7 @@ ebean.default="models.*"
 logger.root=ERROR
 
 # Logger used by the framework:
-logger.play=INFO
+logger.play=DEBUG
 
 # Logger provided to your application:
 logger.application=DEBUG
